# code-flow-skill

./: .gitignore  LICENSE  NOTICE  README.md  package.json  pyproject.toml
examples/: sample-flow.json
src/code_flow_skill/: cli.py
src/code_flow_skill/templates/claude/: code-flow.md
src/code_flow_skill/templates/copilot/: code-flow.instructions.md
src/code_flow_skill/templates/gemini/: code-flow.toml
src/code_flow_skill/templates/shared/: viewer.template.html
templates/claude/: code-flow.md
templates/gemini/: code-flow.toml
